All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/Stock_Transfer_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to capture line items of a stock transfer.</description>
    <label>Stock Transfer Line</label>
    <nameField>
        <displayFormat>SXFRL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transfer Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>