All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/fields/Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information__c</fullName>
    <description>Any additional information relevant to this stock transfer line.</description>
    <inlineHelpText>Any additional information relevant to this stock transfer line.</inlineHelpText>
    <label>Additional Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>