All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/fields/Posted_To_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Posted_To_Inventory__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this stock transfer record has been posted to inventory or not. This is set automatically.</description>
    <inlineHelpText>Indicates if this stock transfer record has been posted to inventory or not. This is set automatically.</inlineHelpText>
    <label>Posted To Inventory</label>
    <type>Checkbox</type>
</CustomField>