All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product. This is a lookup to an existing salesforce product record.</description>
    <inlineHelpText>Name of the product. This is a lookup to an existing salesforce product record.</inlineHelpText>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Stock_Transfer_Line</relationshipName>
    <type>Lookup</type>
</CustomField>