All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/fields/SM_Batch_Lot2__c.field-meta.xml
<CustomField>
    <fullName>SM_Batch_Lot2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</description>
    <inlineHelpText>Identification number assigned to a specific quantity or lot of materials from a single manufacturer.</inlineHelpText>
    <label>Batch/Lot</label>
    <referenceTo>SM_Batch_Lot__c</referenceTo>
    <relationshipLabel>Stock Transfer Lines</relationshipLabel>
    <relationshipName>Stock_Transfer_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>