All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/fields/Stock_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Stock_Transfer__c</fullName>
    <description>Reference to the original Stock Transfer transaction that impacted the stock.</description>
    <label>Stock Transfer</label>
    <referenceTo>Stock_Transfer__c</referenceTo>
    <relationshipLabel>Stock Transfer Lines</relationshipLabel>
    <relationshipName>Stock_Transfer_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>