All_Component_DX/force-app/main/default/objects/Stock_Transfer_Line__c/validationRules/SVMXC_ValidateTransferQuantity.validationRule-meta.xml
<ValidationRule>
    <fullName>SVMXC_ValidateTransferQuantity</fullName>
    <active>true</active>
    <description>Transfer quantity must be greater than zero.</description>
    <errorConditionFormula>( Quantity_Transferred2__c &lt;=0)</errorConditionFormula>
    <errorDisplayField>Quantity_Transferred2__c</errorDisplayField>
    <errorMessage>Quantity transferred should be greater than zero.</errorMessage>
</ValidationRule>